<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".MainBinding">

        <variable
            name="viewModel"
            type="io.gmp.does.lambent.droid.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment"
            android:visibility="visible">

            <TextView
                android:id="@+id/info_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:paddingHorizontal="24dp"
                android:text="@string/app_desc"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/connection_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:id="@+id/connection_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingHorizontal="30dp"
                app:layout_constraintBottom_toTopOf="@id/connection_button_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_message">

                <TextView
                    android:id="@+id/label_host"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".4"
                    android:text="@string/connection_host"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/form_host"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".6"
                    android:text="@={viewModel.host_name}" />

                <TextView
                    android:id="@+id/label_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".4"
                    android:text="@string/connection_port"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/form_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".6"
                    android:inputType="number"
                    android:text="@={viewModel.host_port}" />

                <TextView
                    android:id="@+id/label_realm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".4"
                    android:text="@string/connection_realm"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/form_realm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".6"
                    android:text="@={viewModel.host_realm}" />

            </GridLayout>

            <LinearLayout
                android:id="@+id/connection_button_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connection_form">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/connection_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight=".9"
                        android:onClick="@{() -> viewModel.onConnectButton()}"
                        android:text="@string/app_connect" />

                    <!--                <ProgressBar-->
                    <!--                    android:id="@+id/connection_status_bar"-->
                    <!--                    style="@android:style/Widget.Material.ProgressBar"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_weight=".1"-->
                    <!--                    android:visibility="@{viewModel.connecting_viz}" />-->


                </LinearLayout>

                <TextView
                    android:id="@+id/connection_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.connection_status}" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/grey_100"
                />

        </LinearLayout>
    </LinearLayout>
</layout>