<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutFabNuke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="180dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/link_fab_nuke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:gravity="center_vertical"
            android:src="@drawable/ic_baseline_clear_all_24"
            app:backgroundTint="@color/red_600"
            app:fabSize="mini" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_500"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/linkNuke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/fab_label_link_nuke"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabBulk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="130dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/link_fab_add_bulk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:gravity="center_vertical"
            android:src="@drawable/ic_baseline_playlist_add_24"
            app:backgroundTint="@color/accent"
            app:fabSize="mini" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_500"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/linkBulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/fab_label_link_add_bulk"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/link_fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:gravity="center_vertical"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/pink_A700"
            app:fabSize="mini" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_500"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/linkAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/fab_label_link_add"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabLinkMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_link_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_link_new"
            android:src="@drawable/ic_baseline_add_24"
            android:text="@string/fab_link_new"
            app:fabSize="normal" />
    </LinearLayout>
</FrameLayout>